# mt-queimadas

./: LICENSE  README.md  main.py  pyproject.toml
src/: __init__.py  data.py
